--- a/homework.ipynb
+++ b/homework.ipynb
@@ -294,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 77,
       "metadata": {
         "id": "nhdirreg1pyy"
       },
@@ -302,12 +302,18 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "X = mango_data.drop(columns=['rated_flavor'])\n",
+        "y = mango_data['rated_flavor']\n",
+        "model = LinearRegression()\n",
+        "model.fit(X,y)\n",
+        "X.shape[1]+1\n",
         "p1 = 6"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 78,
       "metadata": {},
       "outputs": [
         {
@@ -316,7 +322,7 @@
               "6"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 78,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -724,7 +730,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 79,
       "metadata": {
         "id": "0R8DkzA7bEJQ"
       },
@@ -732,7 +738,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p7 = 5"
+        "p7 = 6"
       ]
     },
     {
@@ -744,16 +750,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 80,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "5"
+              "6"
             ]
           },
-          "execution_count": 31,
+          "execution_count": 80,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1468,7 +1474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 81,
       "metadata": {
         "id": "E8cvcltFq4wn"
       },
@@ -1488,7 +1494,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 82,
       "metadata": {},
       "outputs": [
         {
@@ -1497,7 +1503,7 @@
               "0.125"
             ]
           },
-          "execution_count": 68,
+          "execution_count": 82,
           "metadata": {},
           "output_type": "execute_result"
         }
