--- a/homework.ipynb
+++ b/homework.ipynb
@@ -294,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 83,
       "metadata": {
         "id": "nhdirreg1pyy"
       },
@@ -307,22 +307,21 @@
         "y = mango_data['rated_flavor']\n",
         "model = LinearRegression()\n",
         "model.fit(X,y)\n",
-        "X.shape[1]+1\n",
-        "p1 = 6"
+        "p1 = X.shape[1]+1"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 84,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "6"
+              "7"
             ]
           },
-          "execution_count": 78,
+          "execution_count": 84,
           "metadata": {},
           "output_type": "execute_result"
         }
