--- a/homework.ipynb
+++ b/homework.ipynb
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "id": "RWYk7xICmOGe"
       },
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "RJSJeBTwCIUS"
       },
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "id": "PiW8n851CKo8"
       },
@@ -125,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -272,7 +272,7 @@
               "7                    2             2  "
             ]
           },
-          "execution_count": 6,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -294,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 5,
       "metadata": {
         "id": "nhdirreg1pyy"
       },
@@ -312,7 +312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -321,7 +321,7 @@
               "7"
             ]
           },
-          "execution_count": 84,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -350,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 7,
       "metadata": {
         "id": "OpJpSZXW2RDO"
       },
@@ -370,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -379,7 +379,7 @@
               "0"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -401,7 +401,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -425,7 +425,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 10,
       "metadata": {
         "id": "vH-PYxIl2zUn"
       },
@@ -445,7 +445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -454,7 +454,7 @@
               "1"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -477,7 +477,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 12,
       "metadata": {
         "id": "aNiGYYTg3sbv"
       },
@@ -490,7 +490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -506,7 +506,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -530,7 +530,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 14,
       "metadata": {
         "id": "qLQyPsen5ExP"
       },
@@ -550,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -559,7 +559,7 @@
               "np.float64(2.0)"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -581,7 +581,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -604,7 +604,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 17,
       "metadata": {
         "id": "8Ply7kvsZ9AB"
       },
@@ -624,7 +624,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -633,7 +633,7 @@
               "2"
             ]
           },
-          "execution_count": 28,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -655,7 +655,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
@@ -729,7 +729,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 20,
       "metadata": {
         "id": "0R8DkzA7bEJQ"
       },
@@ -749,7 +749,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -758,7 +758,7 @@
               "6"
             ]
           },
-          "execution_count": 80,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -778,7 +778,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -796,7 +796,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -805,7 +805,7 @@
               "-1"
             ]
           },
-          "execution_count": 34,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -827,7 +827,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 24,
       "metadata": {
         "id": "O-UvSyhKgofV"
       },
@@ -848,7 +848,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
@@ -857,7 +857,7 @@
               "0"
             ]
           },
-          "execution_count": 36,
+          "execution_count": 25,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -868,7 +868,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -877,7 +877,7 @@
               "5"
             ]
           },
-          "execution_count": 37,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -899,7 +899,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 27,
       "metadata": {
         "id": "8BjrglyMiE3f"
       },
@@ -920,7 +920,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
@@ -929,7 +929,7 @@
               "0"
             ]
           },
-          "execution_count": 39,
+          "execution_count": 28,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -940,7 +940,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [
         {
@@ -949,7 +949,7 @@
               "8"
             ]
           },
-          "execution_count": 40,
+          "execution_count": 29,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -971,7 +971,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 30,
       "metadata": {
         "id": "1gp6Tcbh3IZT"
       },
@@ -992,7 +992,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
@@ -1001,7 +1001,7 @@
               "3.0"
             ]
           },
-          "execution_count": 42,
+          "execution_count": 31,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1012,7 +1012,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
@@ -1021,7 +1021,7 @@
               "33.15484548537714"
             ]
           },
-          "execution_count": 43,
+          "execution_count": 32,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1045,7 +1045,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 33,
       "metadata": {
         "id": "AfQA658F4QXn"
       },
@@ -1066,7 +1066,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
@@ -1075,7 +1075,7 @@
               "0.9102392266268373"
             ]
           },
-          "execution_count": 47,
+          "execution_count": 34,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1086,7 +1086,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [
         {
@@ -1095,7 +1095,7 @@
               "0.30341307554227914"
             ]
           },
-          "execution_count": 48,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1118,7 +1118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 36,
       "metadata": {
         "id": "hMx4gfZpkvR2"
       },
@@ -1154,7 +1154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
@@ -1163,7 +1163,7 @@
               "np.float64(2.0)"
             ]
           },
-          "execution_count": 51,
+          "execution_count": 37,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1186,7 +1186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 38,
       "metadata": {
         "id": "M2wYKVq1k9mU"
       },
@@ -1206,7 +1206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [
         {
@@ -1215,7 +1215,7 @@
               "98"
             ]
           },
-          "execution_count": 54,
+          "execution_count": 39,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1237,7 +1237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1249,7 +1249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 41,
       "metadata": {
         "id": "K1jxw2uFlZQn"
       },
@@ -1270,7 +1270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 42,
       "metadata": {},
       "outputs": [
         {
@@ -1279,7 +1279,7 @@
               "np.float64(0.6)"
             ]
           },
-          "execution_count": 59,
+          "execution_count": 42,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1290,7 +1290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [
         {
@@ -1299,7 +1299,7 @@
               "np.float64(0.4)"
             ]
           },
-          "execution_count": 60,
+          "execution_count": 43,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1310,7 +1310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [
         {
@@ -1319,7 +1319,7 @@
               "np.float64(3.0)"
             ]
           },
-          "execution_count": 61,
+          "execution_count": 44,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1330,7 +1330,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [
         {
@@ -1339,7 +1339,7 @@
               "np.float64(6.8)"
             ]
           },
-          "execution_count": 62,
+          "execution_count": 45,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1363,7 +1363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 46,
       "metadata": {
         "id": "qETAzrs8l6iU"
       },
@@ -1388,7 +1388,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 47,
       "metadata": {},
       "outputs": [
         {
@@ -1419,7 +1419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 48,
       "metadata": {
         "id": "r6b4X09smlcz"
       },
@@ -1432,7 +1432,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 49,
       "metadata": {},
       "outputs": [
         {
@@ -1441,7 +1441,7 @@
               "0"
             ]
           },
-          "execution_count": 66,
+          "execution_count": 49,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1473,7 +1473,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 60,
       "metadata": {
         "id": "E8cvcltFq4wn"
       },
@@ -1481,7 +1481,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p18 = 3"
+        "p18 = 0"
       ]
     },
     {
@@ -1493,16 +1493,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "3"
+              "0"
             ]
           },
-          "execution_count": 86,
+          "execution_count": 61,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1524,7 +1524,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 52,
       "metadata": {
         "id": "CXavfX24nWyL"
       },
@@ -1538,25 +1538,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 53,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "['tiger',\n",
+              "['cow',\n",
+              " 'cow',\n",
+              " 'tiger',\n",
               " 'dog',\n",
-              " 'horse',\n",
-              " 'cow',\n",
               " 'tiger',\n",
-              " 'cow',\n",
-              " 'horse',\n",
-              " 'cat',\n",
               " 'tiger',\n",
-              " 'dog']"
+              " 'horse',\n",
+              " 'dog',\n",
+              " 'dog',\n",
+              " 'tiger']"
             ]
           },
-          "execution_count": 70,
+          "execution_count": 53,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1578,7 +1578,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 54,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1588,7 +1588,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 55,
       "metadata": {},
       "outputs": [
         {
@@ -1618,7 +1618,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 56,
       "metadata": {
         "id": "qHCZc2VFrDfY"
       },
@@ -1638,7 +1638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 57,
       "metadata": {},
       "outputs": [
         {
@@ -1647,7 +1647,7 @@
               "np.float64(-2.3373373373373374)"
             ]
           },
-          "execution_count": 75,
+          "execution_count": 57,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1658,7 +1658,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [
         {
@@ -1667,7 +1667,7 @@
               "np.float64(-8.136356503989221)"
             ]
           },
-          "execution_count": 76,
+          "execution_count": 58,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1695,7 +1695,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "metadata": {},
       "outputs": [],
       "source": [
