--- a/homework.ipynb
+++ b/homework.ipynb
@@ -1473,7 +1473,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 67,
       "metadata": {
         "id": "E8cvcltFq4wn"
       },
@@ -1481,7 +1481,14 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p18 = 0"
+        "c_samples = np.array([0, 1, 2, 3, 4, 5, 6])\n",
+        "loss_values = np.array([1.0, 0.5, 0.25, 0.125, 0.25, 0.6, 0.9])\n",
+        "min_idx = np.argmin(loss_values)\n",
+        "left = min_idx\n",
+        "while left > 0 and loss_values[left - 1] > loss_values[left]:\n",
+        "    left -= 1\n",
+        "\n",
+        "p18 = int(c_samples[left])"
       ]
     },
     {
@@ -1493,7 +1500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 68,
       "metadata": {},
       "outputs": [
         {
@@ -1502,7 +1509,7 @@
               "0"
             ]
           },
-          "execution_count": 61,
+          "execution_count": 68,
           "metadata": {},
           "output_type": "execute_result"
         }
